--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -4,12 +4,12 @@
 # documentation.
 
 # Sample workflow for building and deploying a Jekyll site to GitHub Pages
-name: Deploy Jekyll site to Pages
+name: Deploy Blogs to Pages
 
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["master","main"]
+    branches: ["blogs"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
